--- a/nginx.conf
+++ b/nginx.conf
@@ -12,27 +12,40 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
-    log_format ltsv 'domain:$host\t'
-                    'client:$remote_addr\t'
-                    'user:$remote_user\t'
-                    #'client:$http_x_forwarded_for\t'
-                    'localtime:$time_local\t'
-                    'method:$request_method\t'
-                    'path:$request_uri\t'
-                    'protocol:$server_protocol\t'
-                    'status:$status\t'
-                    'size:$body_bytes_sent\t'
-                    'referer:$http_referer\t'
-                    'agent:$http_user_agent';
-                    #'agent:$http_user_agent\t'
-                    #'response_time:$request_time\t'
-                    #'cookie:$http_cookie\t'
-                    #'set_cookie:$sent_http_set_cookie\t'
-                    #'upstream_addr:$upstream_addr\t'
-                    #'upstream_cache_status:$upstream_cache_status\t'
-                    #'upstream_response_time:$upstream_response_time';
+    # log_format ltsv 'domain:$host\t'
+    #                 'client:$remote_addr\t'
+    #                 'user:$remote_user\t'
+    #                 #'client:$http_x_forwarded_for\t'
+    #                 'localtime:$time_local\t'
+    #                 'method:$request_method\t'
+    #                 'path:$request_uri\t'
+    #                 'protocol:$server_protocol\t'
+    #                 'status:$status\t'
+    #                 'size:$body_bytes_sent\t'
+    #                 'referer:$http_referer\t'
+    #                 'agent:$http_user_agent';
+    #                 #'agent:$http_user_agent\t'
+    #                 #'response_time:$request_time\t'
+    #                 #'cookie:$http_cookie\t'
+    #                 #'set_cookie:$sent_http_set_cookie\t'
+    #                 #'upstream_addr:$upstream_addr\t'
+    #                 #'upstream_cache_status:$upstream_cache_status\t'
+    #                 #'upstream_response_time:$upstream_response_time';
 
-    access_log  /var/log/nginx/access.log  ltsv;
+    # access_log  /var/log/nginx/access.log  ltsv;
+
+    log_format json escape=json '{"domain": "$host", '
+                                '"client": "$remote_addr", '
+                                '"user": "$remote_user", '
+                                '"localtime": "$time_local", '
+                                '"method": "$request_method", '
+                                '"path": "$request_uri", '
+                                '"status": "$status", '
+                                '"size": "$body_bytes_sent", '
+                                '"agent": "$http_user_agent", '
+                                '"response_time": "$request_time ms"}';
+
+    access_log /var/log/nginx/access.log json;
 
     sendfile        on;
     #tcp_nopush     on;
