--- a/nginx.conf
+++ b/nginx.conf
@@ -43,7 +43,7 @@ http {
                                 '"status": "$status", '
                                 '"size": "$body_bytes_sent", '
                                 '"agent": "$http_user_agent", '
-                                '"response_time": "$request_time ms"}';
+                                '"response_time": "$request_time s"}';
 
     access_log /var/log/nginx/access.log json;
 
