--- a/conf.d/app.conf
+++ b/conf.d/app.conf
@@ -3,18 +3,20 @@ server {
     # server_name zbox-demo.barnet.co.jp;
     charset utf-8;
     
-    #set_real_ip_from 172.22.0.1;
-    #real_ip_header X-Forwarded-For;
+    set_real_ip_from 172.0.0.0/8;
+    real_ip_header X-Forwarded-For;
     #real_ip_recursive on;
 
-    proxy_set_header Host $http_host;
-    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header Host $host;
     proxy_set_header X-Forwarded-Host $host;
     proxy_set_header X-Forwarded-Server $host;
+    proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
+    # proxy_set_header X-Forwarded-Proto $scheme;
 
     location / {
+        # root   /usr/share/nginx/html;
+        # index  index.html index.htm;
         proxy_pass http://webserver:3000;
     }
 }
